=============
Release 0.8.5
=============

* fix a bug while removing noisy templates in meta merging
* refactoring of the meta merging GUI, addition of bhatta distances
* meta merging more robust for non stationary recordings
* enhance logging if parameters are missing and/or not defined
* can now display the electrode labels in preview GUI

=============
Release 0.8.4
=============

* fix if no spikes are found on some electrodes
* fix as mean/median-pca methods were broken (albeit not used)
* fix to prevent a rare crash while loading too sparse overlaps
* fix a bug with the new dip method in python 2.7
* add the thresholding method to extract only MUA activity (requested by users)
* channel lists in probe files can be non sorted
* memory usage is dynamically adapted to reduce memory footprint
* hdf5 and npy file format can now work with 3D arrays (x, y, time) or (time, x, y)
* fix a bug if basis for pos and neg spikes have different sizes
* add some docstrings (thanks to Jose Guzman)
* sparse export for phy is now the default
* comments can now be added in the trigger/dead times files
* 4096 channels can now run on a single machine, with low memory consumption
* basic support for 3d probes, without any visualization
* more robust to saturating channels with nan_to_num
* cc_merge set to 1 automatically if templates on few channels are detected
* fix a bug if only one artefact type is given
* fix a bug if only 2 spikes are found on a single electrode
* former parameters sim_same_elec and dip_threshold renamed into merge_method and merge_param
* sanity plots for local merges can now be produced during clustering (debug_plots in [clustering])

=============
Release 0.8.3
=============

* automatic suppression, during meta merging, of noisy templates (for SpikeToolKit/Forest)
* during the phy export, we can automatically pre-assign labels to neurons
* fix a bug when converting to phy with dead channels