@@ -7,6 +7,8 @@ Release 0.8.5
 * meta merging more robust for non stationary recordings
 * enhance logging if parameters are missing and/or not defined
 * can now display the electrode labels in preview GUI
+* detects if a wrong install of MPI is present (linking with mpi4py)
+* conda install overwrites the old parameter file
 
 =============
 Release 0.8.4
